--- a/src/app.pcss
+++ b/src/app.pcss
@@ -78,3 +78,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .text-outline {
+    text-shadow:
+      1px 1px 0 black,
+      -1px -1px 0 black,
+      1px -1px 0 black,
+      -1px 1px black;
+  }
+}
